Adding support to handle booleans as Strings till the DB has boolean datatype support